divs and spans to the paragraphs.
Co-authored-by: Eric81587 <Eric.D.Eggers@Gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,7 +10,60 @@
 </head>
 
 <body>
-
+  <h1>Here is my blog</h1>
+  <h2>All of my fun facts</h2>
+  <div class="first-post">
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit beatae libero pariatur consequatur fuga temporibus
+    cumque ducimus accusantium esse nemo rem quod non iusto nam corporis minus officiis, asperiores quas?
+    Possimus iusto adipisci, animi cupiditate architecto ratione esse molestiae. Natus sunt accusantium earum
+    necessitatibus alias ducimus maxime, pariatur debitis reiciendis quos voluptatibus sit quis dolorem tenetur velit
+    aliquam laudantium ea?
+    Doloremque necessitatibus molestiae ea consequuntur temporibus pariatur possimus. Eligendi, assumenda rerum ipsum
+    cumque quibusdam temporibus atque alias et vero quas accusamus consectetur consequuntur omnis odio sapiente. Cumque
+    numquam ratione tempora.
+    Porro, deleniti. Ducimus quisquam voluptas nostrum distinctio iusto eligendi consequuntur sit dicta explicabo nisi
+    obcaecati enim aliquam odit, eius commodi dolore assumenda voluptatum, molestiae perferendis et porro minima!
+    Aspernatur, recusandae?
+    Reiciendis explicabo tempore, maxime dolores maiores nobis sequi optio a perspiciatis dolorem aliquam eum ducimus
+    repudiandae cupiditate odit eligendi similique omnis iste animi rerum nam? Tempore consequuntur provident
+    perferendis totam?
+  </div>
+  <div class="second-post">
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat eligendi voluptatum eum sequi architecto quos quam
+    totam unde officiis maxime. Minima iure illum eligendi architecto! Qui reiciendis voluptatibus dolorum at.
+    Quos asperiores sequi cum aliquam illum delectus iure ea voluptate laborum. Incidunt dolorem, eum voluptates nam
+    doloremque sequi modi libero magni architecto corporis eos eius ipsum, autem maiores harum alias!
+    Repellendus perferendis beatae, voluptatibus ipsa harum vel quia accusantium iste recusandae aspernatur neque
+    commodi qui perspiciatis, veritatis autem veniam accusamus distinctio impedit ipsum officiis omnis illo? Veritatis
+    veniam eligendi blanditiis?
+  </div>
+  <div class="third-post">
+    <span class="second-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit reprehenderit nostrum animi
+      quod commodi quas id
+      excepturi deserunt? Ipsa pariatur odio impedit cum ducimus doloribus cupiditate cumque dicta adipisci ab.
+      Deleniti, magnam nisi reiciendis dolorum rem similique consectetur, placeat aperiam obcaecati minus, dolorem nulla
+      ipsa adipisci? Dignissimos, enim reprehenderit unde autem quisquam delectus quam blanditiis doloribus voluptatum
+      ipsum magni possimus.</span>
+    Impedit doloremque non explicabo, ipsa reiciendis quibusdam ad sit recusandae provident velit saepe dignissimos quos
+    accusamus distinctio. Labore distinctio minus nostrum neque beatae ipsam quibusdam soluta, quasi tempore. Ea, quos?
+    Nisi adipisci quisquam facere, dolore quam nihil officia? Vitae tempora unde adipisci vero maiores fuga eveniet, non
+    hic doloremque accusantium voluptates neque porro incidunt tenetur molestiae nisi odio! Nostrum, quisquam?
+    Pariatur optio molestias quas, perferendis eligendi ullam deserunt recusandae laborum veniam quidem aliquam iure
+    esse neque quibusdam atque repellendus illo dicta eveniet id iusto, tempora quo. Ipsam autem libero veniam!
+    Officiis beatae dolor suscipit praesentium deserunt iste dicta expedita blanditiis perferendis ut odio fugit ipsum
+    accusantium, velit et debitis rerum? Facere inventore quibusdam perferendis sequi ex repellendus amet, suscipit
+    deserunt!
+    Nulla, nesciunt facere, obcaecati ad error quo dolore necessitatibus vel dolorum dignissimos animi eos. Doloribus
+    sed sapiente alias debitis, aliquid perspiciatis voluptas, libero sit cumque blanditiis distinctio nostrum aperiam.
+    At?
+    Dicta nostrum optio expedita sed ab obcaecati est ducimus recusandae excepturi! Et dicta modi voluptate. Facilis
+    provident quasi consectetur minus, alias quas natus asperiores, et neque, dolor blanditiis repellat nulla?
+    Suscipit magnam explicabo excepturi et recusandae nostrum distinctio nam exercitationem sit, id odit vero dolor
+    eligendi vitae, ratione autem magni aliquid saepe facilis earum dicta rem fugit? Autem, harum commodi.
+    Asperiores eos mollitia reprehenderit deleniti ab sed provident impedit nihil autem cupiditate! Totam voluptas at
+    iste alias laboriosam, quidem temporibus itaque, mollitia repudiandae sunt consequatur pariatur nesciunt esse a.
+    Labore.
+  </div>
 </body>
 
 </html>
